# dataops_incident_lab

./: .gitignore  CODEX_INSTRUCTIONS.md  COLAB_RUNBOOK.md  Dockerfile  README.md  order_dashboard_app.backup_20260424_2.py  order_dashboard_app.backup_20260424_3.py  order_dashboard_app.py  train_foodops.py
data/foodops_lab/logs/: pipeline_runs.json
docs/: ORDER_PIPELINE_APP.md
foodops_env/: Dockerfile  __init__.py  env.py  openenv.yaml  primitives.py  pyproject.toml  reward.py  scenarios.py  server.py
scenarios/: audit_scenarios.py  scenario.schema.json  stuck_promo_after_campaign_end.json
scripts/: preview_scenario_observation.py  run_baseline_measurement.py
tests/: test_foodops_env.py
